@@ -37,6 +37,7 @@
 #include "zend.h"
 #include "zend_API.h"
 #include "zend_extensions.h"
+#include "standard/php_var.h"
 
 /* where to cache the keys */
 eaccelerator_cache_place eaccelerator_keys_cache_place =
@@ -101,14 +102,33 @@ PHP_FUNCTION (eaccelerator_put)
 {
 	char *key;
 	int key_len;
-	zval *val;
+	zval *val, *result;
 	time_t ttl = 0;
 	long where = eaccelerator_keys_cache_place;
 
 	if (zend_parse_parameters (ZEND_NUM_ARGS ()TSRMLS_CC, "sz|ll", &key, &key_len, &val, &ttl, &where) == FAILURE)
 		return;
 
-	if (eaccelerator_put (key, key_len, val, ttl, where TSRMLS_CC)) {
+    if ((Z_TYPE_P(val) & ~IS_CONSTANT_INDEX) == IS_OBJECT) {
+        php_serialize_data_t var_hash;
+        smart_str buf = {0};
+        result = (zval *)emalloc(sizeof(result));
+
+        PHP_VAR_SERIALIZE_INIT(var_hash);
+        php_var_serialize(&buf, &val, &var_hash TSRMLS_CC);
+        PHP_VAR_SERIALIZE_DESTROY(var_hash);
+
+        Z_TYPE_P(result) = IS_NULL;
+        if (buf.c) {
+            ZVAL_STRINGL(result, buf.c, buf.len, 1);
+            Z_TYPE_P(result) = Z_TYPE_P(val);
+        }
+        INIT_PZVAL(result);
+    } else {
+        result = val;
+    }
+
+	if (eaccelerator_put (key, key_len, result, ttl, where TSRMLS_CC)) {
 		RETURN_TRUE;
 	} else {
 		RETURN_FALSE;
@@ -120,12 +140,29 @@ PHP_FUNCTION (eaccelerator_get)
 	char *key;
 	int key_len;
 	long where = eaccelerator_keys_cache_place;
+    zval *value;
 
 	if (zend_parse_parameters (ZEND_NUM_ARGS ()TSRMLS_CC, "s|l", &key, &key_len, &where) == FAILURE)
 		return;
 
-	if (eaccelerator_get (key, key_len, return_value, where TSRMLS_CC)) {
-		return;
+    ALLOC_ZVAL(value);
+    if (eaccelerator_get (key, key_len, value, where TSRMLS_CC)) {
+        if ((Z_TYPE_P(value) & ~IS_CONSTANT_INDEX) == IS_OBJECT) {
+            const unsigned char *p;
+            php_unserialize_data_t var_hash;
+
+            p = (const unsigned char*)Z_STRVAL_P(value);
+            PHP_VAR_UNSERIALIZE_INIT(var_hash);
+            if (!php_var_unserialize(&return_value, &p, p + Z_STRLEN_P(value),  &var_hash TSRMLS_CC)) {
+                PHP_VAR_UNSERIALIZE_DESTROY(var_hash);
+                zval_dtor(return_value);
+                php_error_docref(NULL TSRMLS_CC, E_NOTICE, "Error at offset %ld of %d bytes", 
+                        (long)((char*)p - Z_STRVAL_P(value)), Z_STRLEN_P(value));
+                ea_debug_error("Error unserializing (%s) with length %d\n", Z_STRVAL_P(value), Z_STRLEN_P(value));
+            }
+            PHP_VAR_UNSERIALIZE_DESTROY(var_hash);
+        }
+        return;
 	} else {
 		RETURN_NULL ();
 	}
