@@ -6,6 +6,8 @@
           shape an encoder may return.
         * Some fixes to make eAccelerator compile with php 5.2, this fixes bug #150
         * Restore __toString methods correctly with php 5.2
+        * Fix bug #145, objects are serialized when they are stored in shared memory.
+          Users don't have to do this in their code anymore.
 
 2006-07-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
